Reducing training steps to 10000 and only running evaluation once

--- a/MeasureDetector/configurations/faster_rcnn_inception_resnet_v2_atrous_muscima_pp.config
+++ b/MeasureDetector/configurations/faster_rcnn_inception_resnet_v2_atrous_muscima_pp.config
@@ -102,7 +102,7 @@ train_config: {
   from_detection_checkpoint: true
   load_all_detection_checkpoint_vars: true
   
-  num_steps: 80000
+  num_steps: 10000
   data_augmentation_options {
     random_horizontal_flip {
     }
@@ -121,6 +121,9 @@ eval_config: {
   metrics_set: "coco_detection_metrics"
   use_moving_averages: false
   num_examples: 14
+  # Note: The below line limits the evaluation process to 10 evaluations.
+  # Remove the below line to evaluate indefinitely.
+  max_evals: 1
 }
 
 eval_input_reader: {
