--- a/MeasureDetector/configurations/faster_rcnn_inception_resnet_v2_atrous_muscima_pp.config
+++ b/MeasureDetector/configurations/faster_rcnn_inception_resnet_v2_atrous_muscima_pp.config
@@ -1,8 +1,4 @@
-# Faster R-CNN with Inception v2, configured for Oxford-IIIT Pets Dataset.
-# Users should configure the fine_tune_checkpoint field in the train config as
-# well as the label_map_path and input_path fields in the train_input_reader and
-# eval_input_reader. Search for "PATH_TO_BE_CONFIGURED" to find the fields that
-# should be configured.
+# Faster R-CNN with Inception v2, configured for MUSCIMA++ dataset
 
 model {
   faster_rcnn {
