Ignoring exported models

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@ tutorials/embedding/questions-words.txt
 
 samples/outreach/blogs/segmentation_blogpost/carvana-image-masking-challenge/
 **/protos/*.py
+/output_inference_*/
