--- a/MeasureDetector/configurations/faster_rcnn_resnet50_all_datasets_fine_grid.config
+++ b/MeasureDetector/configurations/faster_rcnn_resnet50_all_datasets_fine_grid.config
@@ -11,14 +11,14 @@ model {
     }
     feature_extractor {
       type: 'faster_rcnn_resnet50'
-      first_stage_features_stride: 16
+      first_stage_features_stride: 8
     }
     first_stage_anchor_generator {
       grid_anchor_generator {
-        scales: [0.25, 0.5, 1.0, 2.0]
-        aspect_ratios: [0.5, 1.0, 2.0]
-        height_stride: 16
-        width_stride: 16
+        scales: [0.25, 0.5, 1.0, 2.0, 4.0]
+        aspect_ratios: [0.5, 1.0, 2.0, 4.0]
+        height_stride: 8
+        width_stride: 8
       }
     }
     first_stage_box_predictor_conv_hyperparams {
@@ -35,9 +35,9 @@ model {
       }
     }
     first_stage_nms_score_threshold: 0.0
-    first_stage_nms_iou_threshold: 0.5
-    first_stage_max_proposals: 300
-    first_stage_localization_loss_weight: 2.0
+    first_stage_nms_iou_threshold: 0.6
+    first_stage_max_proposals: 600
+    first_stage_localization_loss_weight: 4.0
     first_stage_objectness_loss_weight: 1.0
     initial_crop_size: 14
     maxpool_kernel_size: 2
@@ -66,13 +66,13 @@ model {
     second_stage_post_processing {
       batch_non_max_suppression {
         score_threshold: 0.0
-        iou_threshold: 0.3
-        max_detections_per_class: 300
-        max_total_detections: 300
+        iou_threshold: 0.6
+        max_detections_per_class: 600
+        max_total_detections: 600
       }
       score_converter: SOFTMAX
     }
-    second_stage_localization_loss_weight: 2.0
+    second_stage_localization_loss_weight: 4.0
     second_stage_classification_loss_weight: 1.0
   }
 }
@@ -105,8 +105,8 @@ train_config: {
     }
 	
 	random_image_scale {
-		min_scale_ratio: 0.5
-		max_scale_ratio: 1.5
+		min_scale_ratio: 0.8
+		max_scale_ratio: 1.2
     }
 	
 	random_adjust_brightness {
