Playing with various configurations

--- a/MeasureDetector/configurations/faster_rcnn_inception_resnet_v2_atrous_fine_grid_staves.config
+++ b/MeasureDetector/configurations/faster_rcnn_inception_resnet_v2_atrous_fine_grid_staves.config
@@ -1,16 +1,16 @@
-# Faster R-CNN with Resnet-50 (v1), configured for the entire dataset that is available (MUSCIMA++, Edirom, Weber)
+# Faster R-CNN with Inception v2, configured for MUSCIMA++ dataset
 
 model {
   faster_rcnn {
     num_classes: 3
     image_resizer {
       keep_aspect_ratio_resizer {
-        min_dimension: 600
-        max_dimension: 1024
+        min_dimension: 800
+        max_dimension: 1200
       }
     }
     feature_extractor {
-      type: 'faster_rcnn_resnet50'
+      type: 'faster_rcnn_inception_resnet_v2'
       first_stage_features_stride: 8
     }
     first_stage_anchor_generator {
@@ -35,8 +35,8 @@ model {
       }
     }
     first_stage_nms_score_threshold: 0.0
-    first_stage_nms_iou_threshold: 0.6
-    first_stage_max_proposals: 600
+    first_stage_nms_iou_threshold: 0.5
+    first_stage_max_proposals: 100
     first_stage_localization_loss_weight: 4.0
     first_stage_objectness_loss_weight: 1.0
     initial_crop_size: 14
@@ -66,9 +66,9 @@ model {
     second_stage_post_processing {
       batch_non_max_suppression {
         score_threshold: 0.0
-        iou_threshold: 0.6
-        max_detections_per_class: 600
-        max_total_detections: 600
+        iou_threshold: 0.5
+        max_detections_per_class: 100
+        max_total_detections: 100
       }
       score_converter: SOFTMAX
     }
@@ -94,24 +94,24 @@ train_config: {
     }
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "MeasureDetector/data/faster_rcnn_resnet50_coco_2018_01_28/model.ckpt"
+  fine_tune_checkpoint: "MeasureDetector/data/faster_rcnn_inception_resnet_v2_atrous_coco_2018_01_28/model.ckpt"
   from_detection_checkpoint: true
   load_all_detection_checkpoint_vars: true
 
-  num_steps: 85000 
-  
+  num_steps: 30000
+
   data_augmentation_options {
     random_horizontal_flip {
     }
-	
+
 	random_image_scale {
 		min_scale_ratio: 0.8
 		max_scale_ratio: 1.2
     }
-	
+
 	random_adjust_brightness {
 	}
-	
+
 	random_adjust_contrast {
 	}
   }
@@ -128,7 +128,7 @@ train_input_reader: {
 eval_config: {
   metrics_set: "coco_detection_metrics"
   use_moving_averages: false
-  num_examples: 800
+  num_examples: 400
   # Note: The below line limits the evaluation process to 1 evaluation.
   # Remove the below line to evaluate indefinitely.
   max_evals: 1
