Adding README and ignoring transcripts

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ samples/outreach/blogs/segmentation_blogpost/carvana-image-masking-challenge/
 /output_inference_*/
 /StaveDetector/data/
 *.zip
+/DetectionRefiner/checkpoints/
