Playing with other configurations

--- a/StaveDetector/configurations/mask_rcnn_inception_resnet_v2_atrous_muscima-pp_staves.config
+++ b/StaveDetector/configurations/mask_rcnn_inception_resnet_v2_atrous_muscima-pp_staves.config
@@ -6,8 +6,8 @@ model {
     num_classes: 3
     image_resizer {
       keep_aspect_ratio_resizer {
-        min_dimension: 800
-        max_dimension: 1365
+        min_dimension: 600
+        max_dimension: 800
       }
     }
     number_of_stages: 3
@@ -124,16 +124,16 @@ train_config: {
     random_horizontal_flip {
     }
 
-	random_image_scale {
-		min_scale_ratio: 0.8
-		max_scale_ratio: 1.2
-    }
-
-	random_adjust_brightness {
-	}
-
-	random_adjust_contrast {
-	}
+	# random_image_scale {
+	# 	min_scale_ratio: 0.8
+	# 	max_scale_ratio: 1.2
+    # }
+	# 
+	# random_adjust_brightness {
+	# }
+	# 
+	# random_adjust_contrast {
+	# }
   }
 }
 
@@ -150,7 +150,7 @@ eval_config: {
   num_examples: 14
   # Note: The below line limits the evaluation process to 10 evaluations.
   # Remove the below line to evaluate indefinitely.
-  max_evals: 1
+  # max_evals: 1
 }
 
 eval_input_reader: {
