Ignoring detection_output directory

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ samples/outreach/blogs/segmentation_blogpost/carvana-image-masking-challenge/
 /StaveDetector/data/
 *.zip
 /DetectionRefiner/checkpoints/
+/StaveDetector/detection_output/
