--- a/StaveDetector/configurations/mask_rcnn_resnet50_muscima-pp_staves.config
+++ b/StaveDetector/configurations/mask_rcnn_resnet50_muscima-pp_staves.config
@@ -6,8 +6,8 @@ model {
     num_classes: 3
     image_resizer {
       keep_aspect_ratio_resizer {
-        min_dimension: 600
-        max_dimension: 800
+        min_dimension: 800
+        max_dimension: 1365
       }
     }
     number_of_stages: 3
@@ -18,7 +18,7 @@ model {
     first_stage_anchor_generator {
       grid_anchor_generator {
         scales: [0.5, 1.0, 2.0]
-        aspect_ratios: [0.5, 1.0, 2.0]
+        aspect_ratios: [8.0, 16.0, 32.0]
         height_stride: 8
         width_stride: 8
       }
@@ -38,13 +38,13 @@ model {
       }
     }
     first_stage_nms_score_threshold: 0.0
-    first_stage_nms_iou_threshold: 0.7
+    first_stage_nms_iou_threshold: 0.5
     first_stage_max_proposals: 100
     first_stage_localization_loss_weight: 4.0
     first_stage_objectness_loss_weight: 1.0
-    initial_crop_size: 17
-    maxpool_kernel_size: 1
-    maxpool_stride: 1
+    initial_crop_size: 14
+    maxpool_kernel_size: 2
+    maxpool_stride: 2
     second_stage_box_predictor {
       mask_rcnn_box_predictor {
         use_dropout: false
@@ -87,7 +87,7 @@ model {
     second_stage_post_processing {
       batch_non_max_suppression {
         score_threshold: 0.0
-        iou_threshold: 0.6
+        iou_threshold: 0.5
         max_detections_per_class: 100
         max_total_detections: 100
       }
@@ -105,7 +105,7 @@ train_config: {
     rms_prop_optimizer: {
       learning_rate: {
         exponential_decay_learning_rate {
-          initial_learning_rate: 0.003
+          initial_learning_rate: 0.0001
           decay_steps: 80000
           decay_factor: 0.95
         }
@@ -117,24 +117,24 @@ train_config: {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "MeasureDetector/data/faster_rcnn_resnet50_coco_2018_01_28/model.ckpt"
+  fine_tune_checkpoint: "StaveDetector/data/mask_rcnn_resnet50_atrous_coco_2018_01_28/model.ckpt"
   from_detection_checkpoint: true
-  num_steps: 10000
-  #data_augmentation_options {
-    #random_horizontal_flip {
-    #}
+  num_steps: 20000
+  data_augmentation_options {
+    random_horizontal_flip {
+    }
 
-	# random_image_scale {
-	# 	min_scale_ratio: 0.8
-	# 	max_scale_ratio: 1.2
-    # }
-	# 
-	# random_adjust_brightness {
-	# }
-	# 
-	# random_adjust_contrast {
-	# }
-  #}
+	random_image_scale {
+		min_scale_ratio: 0.8
+	 	max_scale_ratio: 1.2
+    }
+	
+	random_adjust_brightness {
+	}
+	
+	random_adjust_contrast {
+	}
+  }
 }
 
 train_input_reader: {
@@ -143,10 +143,11 @@ train_input_reader: {
   }
   label_map_path: "StaveDetector/mapping.txt"
   load_instance_masks: true
-    mask_type: PNG_MASKS
+  mask_type: PNG_MASKS
 }
 
 eval_config: {
+  metrics_set: "coco_mask_metrics"
   num_examples: 14
   # Note: The below line limits the evaluation process to 10 evaluations.
   # Remove the below line to evaluate indefinitely.
